--- a/ANGULAR/RicetteSPA/package.json
+++ b/ANGULAR/RicetteSPA/package.json
@@ -2,11 +2,7 @@
   "name": "ricette-spa",
   "version": "0.0.0",
   "scripts": {
-    "ng": "ng",
-    "start": "ng serve",
-    "build": "ng build",
-    "watch": "ng build --watch --configuration development",
-    "test": "ng test"
+    "start": "npm install && concurrently --names 'SERVER,CLIENT' --prefix-colors 'yellow,blue' --kill-others 'json-server --watch api/recipes.json' 'ng serve --open'"
   },
   "private": true,
   "dependencies": {
@@ -18,6 +14,7 @@
     "@angular/platform-browser": "^16.2.0",
     "@angular/platform-browser-dynamic": "^16.2.0",
     "@angular/router": "^16.2.0",
+    "concurrently": "^8.2.2",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.13.0"
