--- a/ANGULAR/RicetteSPA/package.json
+++ b/ANGULAR/RicetteSPA/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "scripts": {
     "server": "npx json-server --watch api/recipes.json",
-	"start": "npx ng serve --open"
+    "start": "npx ng serve --open"
   },
   "private": true,
   "dependencies": {
@@ -16,7 +16,10 @@
     "@angular/platform-browser-dynamic": "^16.2.0",
     "@angular/router": "^16.2.0",
     "concurrently": "^8.2.2",
+    "express": "^4.18.2",
     "json-server": "^0.17.4",
+    "mongodb": "^6.2.0",
+    "mongoose": "^8.0.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.13.0"
